Combining CSS clip-path with any property that creates a new stacking context makes img element disappear https://bugs.webkit.org/show_bug.cgi?id=233553 rdar://86091397

Reviewed by Said Abou-Hallawa.

When an image is composited and has a clip-path which references an SVG path, we make a mask layer,
and paint the clip-path into it, using the PaintPhase::ClippingMask phase.

RenderReplaced failed to implement support for this paint phase, so add it, similar to how
`RenderBlock::paintObject()` does.

* LayoutTests/compositing/masks/reference-clip-path-on-composited-image-expected.html: Added.
* LayoutTests/compositing/masks/reference-clip-path-on-composited-image.html: Added.
* Source/WebCore/rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::paint):

Canonical link: https://commits.webkit.org/286172@main